--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 		</div>
 		
 		<div id="page-1">
-			<div id="heading">
-				<h1 id="name1">Powerlifting gym Creed</h1>
-				<br/>
-				<h2 class="name2"></h2>
-				<br/>
-			</div>
-			<div id="button">
-				<a href="registration.html" class="button" >Učlani se</a>
+			<div id="animation">
+				<div id="heading">
+					<h1 id="name1">Powerlifting gym Creed</h1>
+					<br/>
+				</div>
+				<div id="button">
+					<a href="registration.html" class="button" >Učlani se</a>
+				</div>
 			</div>
 		</div>
 		
